--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "asantibanez/livewire-calendar": "^2.1",
         "barryvdh/laravel-dompdf": "^1.0",
         "bumbummen99/shoppingcart": "^4.1",
         "dompdf/dompdf": "^1.2",
@@ -18,6 +19,7 @@
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.3",
         "livewire/livewire": "^2.5",
+        "maatwebsite/excel": "^3.1",
         "mike42/escpos-php": "^4.0",
         "milon/barcode": "^9.0",
         "spatie/laravel-permission": "^5.5"
