Point sale V-MORT2: PRUEBA 1 EN SERVER

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=4bf29c388b454dedce2a7fce53cf7086",
+    "/css/app.css": "/css/app.css?id=6641d37c4a99cfdea403fd5f94a5fdb1"
 }
